# devicectrl-common

./: Cargo.toml  README.md
src/: lib.rs  updates.rs
src/device_types/: ceiling_fan.rs  color_bulb.rs  color_light.rs  dimmable_light.rs  led_strip.rs  mod.rs  switch.rs
src/protocol/: auth.rs  http.rs  krypton.rs  mod.rs  simple.rs  socket.rs  tcp.rs  udp.rs
src/protocol/simple/: esp.rs  mod.rs  tokio.rs
