[package]
name = "devicectrl-common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
arrayvec = { version = "0.7.6", features = ["serde"], default-features = false }
paste = "1.0.15"
serde = { version = "1.0.219", default-features = false }
serde_derive = "1.0.219"
serde_json = { version = "1.0.142", default-features = false, features = ["alloc"], optional = true }

# Opional dependencies for tokio targets
tokio = { version = "1.36.0", default-features = false, features = ["net", "sync", "time", "io-util", "macros"], optional = true }
p256 = { version = "0.13.2", default-features = false, features = ["std", "ecdsa"], optional = true }
rand = { version = "0.9.2", default-features = false, features = ["std", "os_rng"], optional = true }


# Optional dependencies for esp targets
esp-hal = { version = "1.0.0-rc.0", default-features = false, features = ["unstable"], optional = true }
esp32-ecdsa = { git = "https://github.com/MatthewCash/esp32-ecdsa.git", optional = true }
embassy-sync = { version = "0.7.2", features = ["defmt"], optional = true }
embassy-futures = { version = "0.1.2", features = ["defmt"], optional = true }
embassy-net = { version = "=0.7.0", features = ["proto-ipv4","tcp","medium-ethernet"], optional = true }
embedded-io-async = { version = "0.6.1", optional = true }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"], optional = true }
rand_core = { version = "0.9.3", optional = true }
embassy-executor = { version = "0.7.0", features = ["defmt",], optional = true }

[features]
default = ["alloc"]

tokio = [
    "std",
    "dep:tokio",
    "dep:serde_json",
    "dep:rand",
    "dep:p256",
]

esp32     = ["alloc", "esp", "esp-hal/esp32", "esp32-ecdsa/esp32"]
esp32s2   = ["alloc", "esp", "esp-hal/esp32s2", "esp32-ecdsa/esp32s2"]
esp32s3   = ["alloc", "esp", "esp-hal/esp32s3", "esp32-ecdsa/esp32s3"]
esp32c2   = ["alloc", "esp", "esp-hal/esp32c2", "esp32-ecdsa/esp32c2"]
esp32c3   = ["alloc", "esp", "esp-hal/esp32c3", "esp32-ecdsa/esp32c3"]
esp32c6   = ["alloc", "esp", "esp-hal/esp32c6", "esp32-ecdsa/esp32c6"]
esp32h2   = ["alloc", "esp", "esp-hal/esp32h2", "esp32-ecdsa/esp32h2"]

esp = [
    "dep:esp-hal",
    "dep:esp32-ecdsa",
    "dep:serde_json",
    "dep:embassy-sync",
    "dep:embassy-futures",
    "dep:embassy-net",
    "dep:embedded-io-async",
    "dep:embassy-time",
    "dep:rand_core",
    "dep:embassy-executor",
]

alloc = []

std = ["alloc"]
